--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,17 +1,23 @@
 html {
-  font-size: 62.5%; /* 16px x 62.5 = 10px = 1rem */
+  font-size: 62.5%;
   box-sizing: border-box;
 }
 body {
   margin: 0;
+  padding: 0;
   height: 100vh;
   font-size: 1.6rem;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Anton', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 #root {
   height: 100%;
+}
+
+/* Colors */
+.black {
+  color: #000;
 }
 
 /* Layout */
@@ -22,12 +28,13 @@ body {
     'main'
     'footer';
   grid-template-columns: 1fr;
-  grid-template-rows: 5rem 1fr 5rem;
+  grid-template-rows: 6rem 1fr 5rem;
   height: 100%;
 }
 header {
   grid-area: header;
-  background-color: #203040;
+  padding: 0.5rem 0 0.8rem 0;
+  background-color: #fff;
 }
 main {
   grid-area: main;
@@ -38,18 +45,18 @@ footer {
   background-color: #203040;
   color: #ffffff;
 }
+
 /* Common */
 h1 {
   font-size: 1.8rem;
-  padding: 1rem 0;
 }
 h2 {
   font-size: 1.6rem;
-  padding: 1rem 0;
 }
 
 a {
   text-decoration: none;
+  transition: 0.2s all ease;
 }
 a:hover {
   color: #ff8000;
@@ -60,6 +67,7 @@ ul {
   list-style-type: none;
 }
 li {
+  letter-spacing: 1px;
   margin-top: 1rem;
 }
 input,
@@ -68,9 +76,9 @@ textarea,
 button {
   padding: 1rem;
   border-radius: 0.5rem;
-  border: 0.1rem #a4a4a4 solid;
+  border: 0.1rem #000 solid;
   font-size: 1.6rem;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Anton', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -78,14 +86,15 @@ button {
   background-color: #f8f8f8;
   cursor: pointer;
 }
-input:hover,
-select:hover,
-textarea:hover,
-button:hover {
-  border: 0.1rem #404040 solid;
-}
 button.primary {
-  background-color: #f0c040;
+  color: #fff;
+  background-color: #000;
+  transition: 0.2s all;
+}
+button.primary:hover {
+  border: 1px solid #000;
+  background-color: #fff;
+  color: #000;
 }
 button.block {
   width: 100%;
@@ -93,13 +102,15 @@ button.block {
 button.small {
   font-size: 1.2rem;
 }
+
 /* Header */
 header a {
   color: #ffffff;
   padding: 1rem;
 }
 a.brand {
-  color: #ffffff;
+  font-family: 'Bebas Neue', cursive;
+  color: #000;
   font-size: 3rem;
   font-weight: bold;
 }
@@ -107,7 +118,7 @@ a.brand {
   background-color: #f02020;
   color: #ffffff;
   border-radius: 50%;
-  padding: 0.2rem 0.7rem;
+  padding: 0.2rem 1rem;
   font-size: 1.4rem;
   margin-left: 0.2rem;
 }
@@ -146,25 +157,37 @@ img.medium {
   width: 100%;
 }
 img.large {
+  /* max-width: 29rem; */
   width: 100%;
 }
 
 /* Card */
 .card {
-  border: 0.1rem #c0c0c0 solid;
-  background-color: #f8f8f8;
-  border-radius: 0.5rem;
+  height: 60rem;
+  border: 1px solid #000;
+  border-radius: 10px;
+  padding: 1.5rem .5rem;
   margin: 1rem;
 }
+.card-image-body {
+  height: 33rem;
+  width: 100%;
+}
 .card-body {
+  text-align: center;
   padding: 1rem;
 }
 .card-body > * {
   margin-bottom: 0.5rem;
 }
-.price {
-  font-size: 2rem;
+.card-heading {
+  font-size: 3rem;
+  color: #000;
 }
+.card-price {
+  font-size: 2.5rem;
+}
+
 /* Rating */
 .rating span {
   color: #f0c040;
@@ -173,6 +196,7 @@ img.large {
 .rating span:last-child {
   color: #404040;
 }
+
 /* Alert */
 .loading {
   display: block !important;
@@ -200,6 +224,7 @@ img.large {
   color: #20a020;
   background-color: #eeffe0;
 }
+
 /* Form */
 .form {
   max-width: 60rem;
@@ -213,6 +238,7 @@ img.large {
 .form label {
   margin: 1rem 0;
 }
+
 /* Dropdown */
 .dropdown {
   display: inline-block;
@@ -261,4 +287,11 @@ img.large {
 }
 .table button {
   margin: 0 0.2rem;
+}
+
+/* Lines */
+.line {
+  width: 100%;
+  height: 0.1px;
+  background-color: rgb(214, 214, 214);
 }
