--- a/template/style.css
+++ b/template/style.css
@@ -1,5 +1,5 @@
-html {
-  font-size: 62.5%; /* 16px x 62.5 = 10px = 1rem */
+/* html {
+  font-size: 62.5%; 
   box-sizing: border-box;
 }
 body {
@@ -9,7 +9,7 @@ body {
   font-family: Helvetica, Arial, sans-serif;
 }
 
-/* Layout */
+Layout
 .grid-container {
   display: grid;
   grid-template-areas:
@@ -33,7 +33,8 @@ footer {
   background-color: #203040;
   color: #ffffff;
 }
-/* Common */
+
+Common
 h1 {
   font-size: 1.8rem;
   padding: 1rem 0;
@@ -49,7 +50,8 @@ a {
 a:hover {
   color: #ff8000;
 }
-/* Header */
+
+Header
 header a {
   color: #ffffff;
   padding: 1rem;
@@ -68,7 +70,8 @@ a.brand {
 .row.center {
   justify-content: center;
 }
-/* Image */
+
+Image
 img {
   border-radius: 0.5rem;
 }
@@ -77,7 +80,7 @@ img.medium {
   width: 100%;
 }
 
-/* Card */
+Card
 .card {
   border: 0.1rem #c0c0c0 solid;
   background-color: #f8f8f8;
@@ -93,8 +96,9 @@ img.medium {
 .price {
   font-size: 2rem;
 }
-/* Rating */
+
+Rating
 .rating span {
   color: #f0c040;
   margin: 0.1rem;
-}
+} */
