--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -109,6 +109,7 @@ header a {
   padding: 1rem;
 }
 a.brand {
+  display: flex;
   font-family: 'Bebas Neue', cursive;
   color: #000;
   font-size: 3rem;
@@ -147,6 +148,7 @@ a.brand {
 /* Image */
 img {
   border-radius: 0.5rem;
+  object-fit: cover;
 }
 img.small {
   max-width: 5rem;
@@ -154,34 +156,38 @@ img.small {
 }
 img.medium {
   max-width: 29rem;
-  width: 100%;
+  height: 29rem;
 }
 img.large {
-  /* max-width: 29rem; */
+  max-width: 29rem;
   width: 100%;
 }
 
 /* Card */
 .card {
-  height: 60rem;
-  border: 1px solid #000;
   border-radius: 10px;
-  padding: 1.5rem .5rem;
+  padding: 1.5rem 0.5rem;
   margin: 1rem;
 }
 .card-image-body {
-  height: 33rem;
   width: 100%;
 }
-.card-body {
+/* .card-body {
   text-align: center;
   padding: 1rem;
 }
 .card-body > * {
   margin-bottom: 0.5rem;
+} */
+.card-desc-body {
+  text-align: start;
 }
-.card-heading {
-  font-size: 3rem;
+.card-heading-large {
+  font-size: 2.5rem;
+  color: #000;
+}
+.card-heading-small {
+  font-size: 2.3rem;
   color: #000;
 }
 .card-price {
@@ -259,6 +265,7 @@ img.large {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
 /* Checkout Steps */
 .checkout-steps > div {
   border-top: 0.3rem #c0c0c0 solid;
@@ -271,6 +278,7 @@ img.large {
   border-top-color: #f08000;
   color: #f08000;
 }
+
 /* Table */
 .table {
   width: 100%;
@@ -294,4 +302,10 @@ img.large {
   width: 100%;
   height: 0.1px;
   background-color: rgb(214, 214, 214);
+}
+
+@media (max-width: 400px) {
+  .line {
+    display: none;
+  }
 }
