--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -82,19 +82,30 @@ button {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.fa-xmark{
+.fa-xmark {
   font-size: 2rem;
   margin-right: 1rem;
 }
+.topbar-input-container {
+  border: 1px solid;
+  border-radius: 5rem;
+  padding: .3rem 1.2rem;
+margin-right: .5rem;
+}
 .topbar-input {
-  padding: .4rem .8rem;
-  margin-right: 1rem;
-  border-radius: 1.3rem;
-  border: 0.1rem #000 solid;
+  border: none;
+  outline: none;
+  padding: 0;
+  padding-bottom: .3rem;
+  box-shadow: 0 1rem 2rem rgba(black, 0.1);
   font-size: 1.5rem;
   font-family: 'Anton', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+.topbar-input-button {
+  border: none;
+  padding: 0;
 }
 button {
   background-color: #f8f8f8;
